static/elements.css
#files {
	overflow: auto;
	padding: 8px;
	position: absolute;
	top: 21px;
	bottom: 0;
}

#files > li {
	float: left;
	list-style-type: none;
	margin: 8px;
	width: 128px;
	height: 128px;
}

#files > li:hover {
	background: #f5f5f5;
}

#files div {
	margin: 4px 16px;
	width: 96px;
	height: 96px;
	background: #ccc;
}

#files input[type=text] {
	border: none;
	width: 100%;
	text-align: center;
	background: none;
	outline: none;
}

.panel > h2 {
	padding: 2px 8px;
	font-size: 14px;
}

.menu, .tab {
	padding: 2px 8px;
}

button {
	font-size: 14px;
	padding: 2px 4px;
	margin-right: 1px;
	outline: none;
}

button:hover {
}

.tab {
	padding-bottom: 0;
}

.tab > button {
	font-size: 14px;
	padding: 2px 4px;
	margin-bottom: -1px;
	margin-left: -2px;
}

.tab > button.current {
}

.tab > button:hover {
}

#canvas {
	margin: 12px;
	position: absolute;
	top: 21px;
	bottom: 0;
	left: 0;
	right: 0;
	text-align: center;
}

#canvas > span {
	display: block;
	margin: -8px;
	position: relative;
	top: 50%;
}

.panel_content {
	margin: 12px;
}

.input {
	padding: 4px;
	margin-bottom: 8px;
	width: 100%;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	outline: none;
}
/*
.comment {
	border: 1px solid #aaa;
	box-shadow: 0 4px 8px #eee inset;
	-moz-box-shadow: 0 4px 8px #eee inset;
	-webkit-box-shadow: 0 4px 8px #eee inset;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	padding: 4px;
	font-size: 14px;
	color: #888;
	position: relative;
}

.comment:after, .comment:before {
	border: solid transparent;
	content: ' ';
	height: 0;
	top: 100%;
	position: absolute;
	width: 0;
}

.comment:after {
	border-width: 7px;
	border-top-color: #fff;
	left: 9px;
}

.comment:before {
	border-width: 8px;
	border-top-color: #888;
	left: 8px;
}
*/

/* richtextarea */
.richtextarea {
	overflow: auto;
	height: 340px;
	position: relative;
	-moz-padding-start: 5px;
}

.richtextarea, .richtextarea textarea {
	font-size: 16px !important;
	font-family: monospace !important;
	color: black !important;
}

.richtextarea textarea {
	border: 0;
	padding: 0;
	margin: 0;
	opacity: 0.2;
	filter: alpha(opacity = 20);
	min-width: 100%;
	min-height: 100%;
	overflow: hidden;
	background: 0;
	position: absolute;
	top: 0;
	left: 0;
	outline: none;
	resize: none;
	padding: 4px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

/* syntax highlighting */
span.cmd { color: green; }
span.num { color: navy; }
span.str { color: blue; }
span.box { color: red; }
span.cmt { color: gray; }
span.err { border-bottom: 1px dotted red; }

/* show tabs */
span.arr {
	position: relative;
}

/* draws a line */
span.arr:before {
	content: '';
	position: absolute;
	overflow: hidden;
	top: 0;
	left: 2px;
	right: 6px;
	margin-top: 8px;
	height: 2px;
	background: silver;
}

/* draws a small triangle */
span.arr:after {
	content: '';
	position: absolute;
	display: block;
	width: 0;
	height: 0;
	top: 4px;
	right: 2px;
	border: 5px dotted transparent;
	border-left: 5px solid silver;
	border-right: 0;
}

/*
button {
	border: 1px solid #aaa;
	background: #eee;
	box-shadow: 0 2px 4px #ddd, 0 8px 16px #fff inset;
	-moz-box-shadow: 0 2px 4px #ddd, 0 8px 16px #fff inset;
	-webkit-box-shadow: 0 2px 4px #ddd, 0 8px 16px #fff inset;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	margin-bottom: 8px;
	font-size: 14px;
	padding: 4px;
	color: #888;
}

button:hover {
	border: 1px solid #888;
	color: #555;
}

button:active {
	box-shadow: 0 2px 4px #ddd, 0 -8px 16px #fff inset;
	-moz-box-shadow: 0 2px 4px #ddd, 0 -8px 16px #fff inset;
	-webkit-box-shadow: 0 2px 4px #ddd, 0 -8px 16px #fff inset;
}
*/

#bsod {
	position: absolute;
	top: 50%;
	left: 50%;
	height: 480px;
	width: 640px;
	margin: -240px -320px;
	color: white;
	font-size: 16px;
	font-family: monospace;
	text-align: center;
}

#bsod > h1 {
	display: inline;
	background: white;
	color: blue;
	font-weight: normal;
	font-size: inherit;
}

#bsod > p {
	margin-top: 16px;
}

#bsod > pre {
	margin-top: 16px;
	text-align: left;
	white-space: pre-wrap;
}

